# simpledebt

./: .gitignore  Cargo.toml
src/: database.rs  main.rs
