[package]
name = "utang"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
rusqlite = {git = "https://github.com/rusqlite/rusqlite"}
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["cargo", "derive"] }
num-format = "0.4.4"
dirs = "5.0.1"
